--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 
+:root {
+    --book-padding: max(1rem, 20px);
+    --text-color: rgb(30, 30, 40);
+}
+
 * {
     box-sizing: border-box;
     line-height: 1;
@@ -16,7 +21,8 @@ html {
 
 body {
     background: black;
-    color: rgb(30, 30, 40);
+    color:var(--text-color);
+    overflow: hidden;
 }
 
 
@@ -49,14 +55,29 @@ a {
     transition: transform 0.5s ease, color 0.4s ease;
 }
 a:hover, a:focus {
-    color:rgb(30, 30, 40);
+    color:var(--text-color);
     transform: rotate(3deg) translateY(-0.03rem);
+}
+
+button {
+    font-size: inherit;
+    font-family: inherit;
+    color: inherit;
+    border: none;
+    border-radius: 0.15rem;
+    padding: 0.2em 0.5em;
+    background: rgb(255, 255, 240);
+    cursor: pointer;
 }
 
 .fa {
     font-size: 0.9em;
 }
 
+
+.nolinebreak {
+    white-space: nowrap;
+}
 
 .nomarkers {
     list-style: none;
@@ -65,29 +86,33 @@ a:hover, a:focus {
 
 
 #book {
+    display: grid;
+    grid-template-rows: 1fr auto;
+    grid-gap: var(--book-padding);
     position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
-    /* top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); */
-    padding: max(1.75%, 17.5px) max(2%, 20px);
+    padding: var(--book-padding);
     background: rgb(255, 250, 220);
-    overflow-y: auto;
+    overflow: hidden;
 
     background: url("assets/images/paper-PLACEHOLDER.webp");
     background-size: cover;
     background-position: center;
 }
 
+#pages-container {
+    min-height: 0;
+}
+
 .page {
-    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto 1fr;
     grid-column-gap: 1rem;
 
     display: none;
+    height: 100%;
 }
 
 .page.page-opened {
@@ -99,11 +124,48 @@ a:hover, a:focus {
 }
 
 .page-header {
-    grid-column: span 2;
     padding-bottom: 0.5rem;
     border-bottom: 0.125rem solid currentColor;
     margin-bottom: 0.8rem;
 }
+
+.page-body {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 1rem;
+    overflow-x: hidden;
+    overflow-y: auto;
+    min-height: 100%;
+}
+
+
+#page-navigation {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 1rem;
+    align-items: center;
+}
+
+#page-navigation > div {
+    position: relative;
+    height: 100%;
+}
+#page-navigation > div:last-of-type {
+    text-align: right;
+}
+
+.page-number {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.btn-page {
+    width: 2.5rem;
+}
+
 
 
 @media (max-width: 1000px) {
