--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
 html {
     font-family: "Lazy Dog", serif;
-    font-size: max(2vw, 30px);
+    font-size: max(2vw, 26px);
 }
 
 body {
@@ -27,12 +27,28 @@ body {
 
 
 h1, h2, h3, h4, h5, h6 {
-    margin-top: 0;
+    margin-top: 1rem;
     margin-bottom: 0.5rem;
+    line-height: 0.9;
 }
 
 h1 {
     font-size: 2rem;
+}
+h2 {
+    font-size: 1.5rem;
+}
+h3 {
+    font-size: 1.2rem;
+}
+h4 {
+    font-size: 1rem;
+}
+h5 {
+    font-size: 0.75rem;
+}
+h6 {
+    font-size: 0.5rem;
 }
 
 ul, ol {
@@ -55,7 +71,7 @@ a {
     transition: transform 0.5s ease, color 0.4s ease;
 }
 a:hover, a:focus {
-    color:var(--text-color);
+    color: var(--text-color);
     transform: rotate(3deg) translateY(-0.03rem);
 }
 
@@ -65,13 +81,29 @@ button {
     color: inherit;
     border: none;
     border-radius: 0.15rem;
-    padding: 0.2em 0.5em;
+    padding: 0.25em 0.7em;
     background: rgb(255, 255, 240);
     cursor: pointer;
 }
 
+img {
+    display: block;
+    border: 0.5rem solid white;
+    border-bottom-width: 2rem;
+    object-fit: cover; /* Do not scale the image */
+    object-position: center; /* Center the image within the element */
+    height: 7rem;
+    width: 7rem;
+    box-sizing: content-box;
+    filter: sepia(10%);
+}
+img::after {
+    content: attr(data-imgdescription);
+}
+
+
 .fa {
-    font-size: 0.9em;
+    font-size: 0.85em;
 }
 
 
@@ -84,11 +116,34 @@ button {
     padding-inline: 0;
 }
 
+.image-wrapper {
+    position: relative;
+    display: inline-block;
+    width: fit-content;
+}
+.image-description {
+    position: absolute;
+    bottom: 1rem;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    font-size: 0.75rem;
+    line-height: 0.9;
+    width: calc(100% - 1rem);
+    text-align: center;
+}
+
+.two-columns {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 0.5rem;
+    justify-items: center;
+}
+
 
 #book {
     display: grid;
     grid-template-rows: 1fr auto;
-    grid-gap: var(--book-padding);
+    grid-gap: 0.1rem;
     position: fixed;
     width: 100%;
     height: 100%;
@@ -119,24 +174,38 @@ button {
     display: grid;
 }
 
-.page *:last-child {
+.page > * *:first-child {
+    margin-top: 0;
+}
+.page > * *:last-child {
     margin-bottom: 0;
 }
 
 .page-header {
     padding-bottom: 0.5rem;
     border-bottom: 0.125rem solid currentColor;
-    margin-bottom: 0.8rem;
+    margin-bottom: 0rem;
 }
 
 .page-body {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, min-content);
     grid-column-gap: 1rem;
     overflow-x: hidden;
     overflow-y: auto;
     min-height: 100%;
+    padding-top: 0.8rem;
+    padding-bottom: var(--book-padding);
+    mask-image: linear-gradient(0deg, transparent 0%, black calc(var(--book-padding) - 0.1rem), black calc(100% - 0.8rem), transparent 100%);
 }
+.page-body::-webkit-scrollbar { /* Chrome, Safari and Opera */
+  display: none;
+}
+.page-body {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+} 
 
 
 #page-navigation {
@@ -171,6 +240,16 @@ button {
 @media (max-width: 1000px) {
     .page-half {
         grid-column: span 2;
-        margin-bottom: 1rem;
+    }
+    .page-half:first-of-type {
+        padding-bottom: 0.5rem;
+        border-bottom: 0.125rem solid rgba(30, 30, 40, 0.5);
+    }
+    .page-half:last-of-type {
+        margin-top: 0.5rem;
+    }
+
+    .page-number {
+        display: none;
     }
 }
