--- a/style.css
+++ b/style.css
@@ -88,14 +88,17 @@ button {
 
 img {
     display: block;
-    border: 0.5rem solid white;
-    border-bottom-width: 2rem;
-    object-fit: cover; /* Do not scale the image */
-    object-position: center; /* Center the image within the element */
-    height: 7rem;
-    width: 7rem;
-    box-sizing: content-box;
+    padding: 5%;
+    padding-bottom: 20%;
+    object-fit: cover;
+    object-position: center;
+    width: 10rem;
+    max-width: 100%;
     filter: sepia(10%);
+    aspect-ratio: 22/25;
+    border-radius: 0.75%;
+    background: rgb(250, 250, 240);
+    box-shadow: 0 0.1rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 img::after {
     content: attr(data-imgdescription);
@@ -123,13 +126,21 @@ img::after {
 }
 .image-description {
     position: absolute;
-    bottom: 1rem;
+    bottom: 9%;
     left: 50%;
     transform: translate(-50%, 50%);
     font-size: 0.75rem;
     line-height: 0.9;
     width: calc(100% - 1rem);
     text-align: center;
+}
+.image-var1 {
+    rotate: 3deg;
+    transform-origin: calc(50% - 0.2rem) calc(50% + 0.5rem);
+}
+.image-var2 {
+    rotate: -5deg;
+    transform-origin: calc(50% + 5rem) calc(50% - 2rem);
 }
 
 .two-columns {
@@ -197,7 +208,7 @@ img::after {
     min-height: 100%;
     padding-top: 0.8rem;
     padding-bottom: var(--book-padding);
-    --mask-gradient: linear-gradient(0deg, transparent 0%, black calc(var(--book-padding) - 0.1rem), black calc(100% - 0.8rem));
+    --mask-gradient: linear-gradient(0deg, transparent 0%, black calc(var(--book-padding) - 0.1rem), black calc(100% - 0.8rem), rgba(0, 0, 0, 0.5) 100%);
     -webkit-mask-image: var(--mask-gradient);
     mask-image: var(--mask-gradient);
 }
@@ -240,6 +251,21 @@ img::after {
 
 
 @media (max-width: 1000px) {
+
+    img {
+        width: 100%;
+    }
+
+
+    .image-wrapper {
+        width: 80%;
+    }
+
+    .two-columns > * {
+        grid-column: span 2;
+    }
+
+
     .page-half {
         grid-column: span 2;
     }
@@ -254,4 +280,5 @@ img::after {
     .page-number {
         display: none;
     }
+
 }
