--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 
 :root {
+    --divider-border: 0.125rem solid currentColor;
     --book-padding: max(1rem, 20px);
     --text-color: rgb(30, 30, 40);
 }
@@ -16,7 +17,7 @@
 
 html {
     font-family: "Lazy Dog", serif;
-    font-size: max(2vw, 26px);
+    font-size: max(2vw, 28px);
 }
 
 body {
@@ -165,14 +166,14 @@ img::after {
 
 #book {
     display: grid;
-    grid-template-rows: 1fr auto;
-    grid-gap: 0.1rem;
+    grid-template-rows: auto 1fr auto;
     position: fixed;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
     padding: var(--book-padding);
+    padding-top: 0;
     background: rgb(255, 250, 220);
     overflow: hidden;
 
@@ -181,8 +182,31 @@ img::after {
     background-position: center;
 }
 
+
+#bookmarks {
+    margin-bottom: 0.75rem;
+    display: flex;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
+.bookmark {
+    background: #e62b2b;
+    color: currentColor;
+    width: 1.7rem;
+    padding: 1rem 0 0.5rem 0;
+    text-align: center;
+    border-bottom-left-radius: 0.2rem;
+    border-bottom-right-radius: 0.2rem;
+}
+.bookmark + .bookmark {
+    margin-left: 0.75rem;
+}
+
+
 #pages-container {
     min-height: 0;
+    margin-bottom: 0.1rem;
 }
 
 .page {
@@ -206,7 +230,7 @@ img::after {
 
 .page-header {
     padding-bottom: 0.5rem;
-    border-bottom: 0.125rem solid currentColor;
+    border-bottom: var(--divider-border);
     margin-bottom: 0rem;
 }
 
@@ -258,6 +282,7 @@ img::after {
 
 .btn-page {
     width: 2.5rem;
+    height: 2rem;
 }
 
 
@@ -283,7 +308,7 @@ img::after {
     }
     .page-half:first-of-type {
         padding-bottom: 0.5rem;
-        border-bottom: 0.125rem solid rgba(30, 30, 40, 0.5);
+        border-bottom: var(--divider-border);
     }
     .page-half:last-of-type {
         margin-top: 0.5rem;
