--- a/style.css
+++ b/style.css
@@ -91,6 +91,10 @@ button {
     background: rgb(255, 255, 240);
     cursor: pointer;
 }
+button:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
 
 img {
     display: block;
@@ -103,7 +107,7 @@ img {
     filter: sepia(10%);
     aspect-ratio: 22/25;
     border-radius: 0.75%;
-    background: rgb(250, 250, 240);
+    background: #e6e6e6;
     box-shadow: 0 0.1rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 img::after {
@@ -184,7 +188,7 @@ img::after {
 
 
 #bookmarks {
-    margin-bottom: 0.75rem;
+    padding-bottom: 0.8rem;
     display: flex;
     overflow-x: auto;
     overflow-y: hidden;
@@ -198,9 +202,15 @@ img::after {
     text-align: center;
     border-bottom-left-radius: 0.2rem;
     border-bottom-right-radius: 0.2rem;
+    transform: translate(0, -0.25rem);
+    margin-bottom: -0.25rem;
 }
 .bookmark + .bookmark {
     margin-left: 0.75rem;
+}
+.bookmark:hover, .bookmark:focus {
+    color: inherit;
+    transform: translate(0, 0);
 }
 
 
@@ -278,11 +288,14 @@ img::after {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-size: 1.5rem;
 }
 
 .btn-page {
     width: 2.5rem;
     height: 2rem;
+    padding: 0;
+    font-size: 1.5rem;
 }
 
 
@@ -295,7 +308,7 @@ img::after {
 
 
     .image-wrapper {
-        width: 80%;
+        width: 100%;
     }
 
     .two-columns > * {
