--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
 :root {
     --divider-border: 0.125rem solid currentColor;
     --book-padding: max(1rem, 20px);
-    --text-color: rgb(30, 30, 40);
+
+    --black: rgb(30, 30, 40);
+    --white: rgb(250, 250, 240);
 }
 
 * {
@@ -22,7 +24,7 @@ html {
 
 body {
     background: black;
-    color:var(--text-color);
+    color:var(--black);
     overflow: hidden;
 }
 
@@ -72,13 +74,17 @@ p {
 
 a {
     display: inline-block;
-    color: rgb(85, 75, 75);
-    text-decoration: none;
-    transition: transform 0.5s ease, color 0.4s ease;
+    /* color: rgb(85, 75, 75); */
+    color: currentColor;
+    text-decoration: 0.05rem solid underline;
+    box-shadow: -0.075rem 0.1rem 0.2rem transparent;
+    transition: transform 0.5s ease, color 0.4s ease, text-decoration-color 0.2s ease;
 }
 a:hover, a:focus {
-    color: var(--text-color);
+    color: rgb(85, 75, 75);
+    text-decoration-color: transparent;
     transform: rotate(3deg) translateY(-0.03rem);
+    z-index: 99;
 }
 
 button {
@@ -88,7 +94,7 @@ button {
     border: none;
     border-radius: 0.15rem;
     padding: 0.25em 0.7em;
-    background: rgb(255, 255, 240);
+    background: var(--white);
     cursor: pointer;
 }
 button:disabled {
@@ -107,7 +113,7 @@ img {
     filter: sepia(10%);
     aspect-ratio: 22/25;
     border-radius: 0.75%;
-    background: #e6e6e6;
+    background: var(--white);
     box-shadow: 0 0.1rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 img::after {
@@ -154,7 +160,7 @@ img::after {
 }
 .page .image-wrapper.image-left-1 {
     rotate: -3deg;
-    margin: 0.3rem;
+    margin: 0.22rem;
 }
 .page .image-wrapper.image-left-2 {
     rotate: -5deg;
@@ -162,7 +168,7 @@ img::after {
 }
 .page .image-wrapper.image-right-1 {
     rotate: 3deg;
-    margin: 0.3rem;
+    margin: 0.22rem;
 }
 .page .image-wrapper.image-right-2 {
     rotate: 5deg;
@@ -204,13 +210,17 @@ img::after {
 }
 
 .bookmark {
-    background: #dd1e1e;
+    background: #dd1e1e !important;
+    background: url("assets/images/bookmark.png") !important;
+    background-size: 100% !important;
+    background-position: bottom center !important;
+    box-shadow: none !important;
+    margin: 0;
     color: #f0f0fa;
     width: 1.7rem;
-    padding: 1rem 0 0.5rem 0;
+    padding: 0.65rem 0 0.85rem 0;
     text-align: center;
-    border-bottom-left-radius: 0.2rem;
-    border-bottom-right-radius: 0.2rem;
+    border-radius: 0;
     transform: translate(0, -0.25rem);
     margin-bottom: -0.25rem;
 }
