--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ a {
     text-decoration: 0.05rem solid underline;
     box-shadow: -0.075rem 0.1rem 0.2rem transparent;
     transition: transform 0.5s ease, color 0.4s ease, text-decoration-color 0.2s ease;
+    cursor: pointer;
 }
 a:hover, a:focus {
     color: rgb(85, 75, 75);
@@ -203,10 +204,19 @@ img::after {
 
 
 #bookmarks {
-    padding-bottom: 0.8rem;
     display: flex;
+    padding-bottom: 0.8rem;
     overflow-x: auto;
     overflow-y: hidden;
+    white-space: nowrap;
+}
+
+#bookmarks-left, #bookmarks-right {
+    display: flex;
+}
+#bookmarks-right {
+    margin-left: auto;
+    padding-left: 0.75rem;
 }
 
 .bookmark {
