--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --divider-border: 0.125rem solid currentColor;
     --book-padding: max(1rem, 20px);
 
-    --black: rgb(30, 30, 40);
+    --black: rgb(20, 20, 35);
     --white: rgb(250, 250, 240);
 }
 
@@ -36,22 +36,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 2rem;
+    font-size: 1.75rem;
 }
 h2 {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
 }
 h3 {
     font-size: 1.2rem;
-}
-h4 {
-    font-size: 1rem;
-}
-h5 {
-    font-size: 0.75rem;
-}
-h6 {
-    font-size: 0.5rem;
 }
 
 ul, ol {
@@ -82,6 +73,7 @@ a {
     cursor: pointer;
 }
 a:hover, a:focus {
+    position: relative;
     color: rgb(85, 75, 75);
     text-decoration-color: transparent;
     transform: rotate(3deg) translateY(-0.03rem);
@@ -197,7 +189,7 @@ img::after {
     background: rgb(255, 250, 220);
     overflow: hidden;
 
-    background: url("assets/images/paper-PLACEHOLDER.webp");
+    background: url("assets/images/background.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -323,7 +315,7 @@ img::after {
     width: 2.5rem;
     height: 2rem;
     padding: 0;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 
