--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 
 html {
-    font-family: "Lazy Dog", serif;
+    font-family: "Lazy Dog", Arial, Helvetica, sans-serif;
     font-size: min(5vh, max(1.8vw, 28px));
 }
 
