--- a/style.css
+++ b/style.css
@@ -20,10 +20,11 @@
 html {
     font-family: "Lazy Dog", Arial, Helvetica, sans-serif;
     font-size: min(5vh, max(1.8vw, 28px));
+    font-display: swap;
 }
 
 body {
-    background: black;
+    background: white;
     color:var(--black);
     overflow: hidden;
 }
