--- a/style.css
+++ b/style.css
@@ -83,32 +83,25 @@ ul p, ol p {
     margin-bottom: 0.25rem;
 }
 
-table {
-    width: 100%;
-    table-layout: fixed;
-}
-table th {
-    text-align: left;
-}
-
 p {
     margin: 0;
     margin-bottom: 0.5rem;
 }
 
 a {
-    display: inline-block;
-    color: var(--theme-color);
-    text-shadow: 0.075rem 0.1rem 0rem #2d3333, 0rem 0rem 0.1rem #2d3333, 0rem 0.025rem 0.05rem #2d3333;
+    /* display: inline-block; */
+    color: rgb(40, 68, 145);
+    /* color: var(--theme-color);
+    text-shadow: 0.075rem 0.1rem 0rem #2d3333, 0rem 0rem 0.1rem #2d3333, 0rem 0.025rem 0.05rem #2d3333; */
     text-decoration: none;
-    transition: transform 0.5s ease, color 0.4s ease, text-shadow 0.5s ease;
     cursor: pointer;
+    /* transition: transform 0.5s ease, color 0.4s ease, text-shadow 0.5s ease; */
 }
-a:hover, a:focus {
+/* a:hover, a:focus {
     position: relative;
     transform: rotate(3deg) translateY(-0.03rem);
     z-index: 99;
-}
+} */
 
 hr {
     border: none;
@@ -236,6 +229,11 @@ img::after {
     flex-wrap: wrap;
 }
 
+.two-columns {
+    column-count: 2;
+    column-gap: 0.5rem;
+}
+
 
 #book {
     display: grid;
@@ -289,6 +287,7 @@ img::after {
     border-radius: 0;
     transform: translate(0, -0.25rem);
     margin-bottom: -0.25rem;
+    transition: transform 0.3s ease;
 }
 .bookmark:hover, .bookmark:focus {
     color: #f0f0fa;
@@ -470,6 +469,10 @@ img::after {
     }
     .left > * {
         width: fit-content;
+    }
+
+    .two-columns {
+        column-count: 1;
     }
 
 
